# spinali

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: build.yml
app/afbr_s50_test/: CMakeLists.txt  prj.conf
app/afbr_s50_test/src/: main.c
app/board_test/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/board_test/boards/: mr_mcxn_t1_mcxn947_cpu0.overlay
app/board_test/src/: main.c
app/flex_io/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/flex_io/boards/: mr_mcxn_t1_mcxn947_cpu0.conf  mr_mcxn_t1_mcxn947_cpu0.overlay
app/flex_io/src/: boot_banner.c
app/optical_flow/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/optical_flow/boards/: mr_mcxn_t1_mcxn947_cpu0.conf  mr_mcxn_t1_mcxn947_cpu0.overlay  native_sim_native.conf
app/optical_flow/src/: boot_banner.c
app/rtk_gnss/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/rtk_gnss/boards/: mr_mcxn_t1_mcxn947_cpu0.conf  mr_mcxn_t1_mcxn947_cpu0.overlay
app/rtk_gnss/src/: boot_banner.c
drivers/: CMakeLists.txt  Kconfig
drivers/actuate/: CMakeLists.txt
drivers/actuate/dshot/: CMakeLists.txt  Kconfig  main.c
drivers/actuate/led_array/: CMakeLists.txt  Kconfig  main.c
drivers/actuate/pwm/: CMakeLists.txt  Kconfig  main.c
drivers/actuate/sound/: CMakeLists.txt  Kconfig  actuator_sound.h  main.c
drivers/actuate/status_led/: CMakeLists.txt  Kconfig  main.c
drivers/actuate/vesc_can/: CMakeLists.txt  Kconfig  main.c
drivers/sense/: CMakeLists.txt  Kconfig
drivers/sense/accel/: CMakeLists.txt  Kconfig  main.c
drivers/sense/baro/: CMakeLists.txt  Kconfig  main.c
drivers/sense/icm42688/: CMakeLists.txt  Kconfig  main.c
drivers/sense/imu/: CMakeLists.txt  Kconfig  main.c
drivers/sense/mag/: CMakeLists.txt  Kconfig  main.c
drivers/sense/power/: CMakeLists.txt  Kconfig  main.c
drivers/sense/safety/: CMakeLists.txt  Kconfig  main.c
drivers/sense/sbus/: CMakeLists.txt  Kconfig  main.c
drivers/sense/vesc_can_status/: CMakeLists.txt  Kconfig  main.c
drivers/sense/wheel_odometry/: CMakeLists.txt  Kconfig  main.c
drivers/synapse/: CMakeLists.txt  Kconfig
drivers/synapse/cdr/: CMakeLists.txt  dds_serializer.c  dds_serializer.h  synapse_msgs.c.em  synapse_msgs.h.em  synapse_msgs.py
drivers/synapse/eth_rx/: CMakeLists.txt  Kconfig
drivers/synapse/eth_rx/src/: main.c
drivers/synapse/eth_tx/: CMakeLists.txt  Kconfig
drivers/synapse/eth_tx/src/: main.c
drivers/synapse/eth_tx/src/proto/: udp_tx.c
drivers/synapse/log_sdcard/: CMakeLists.txt  Kconfig
drivers/synapse/log_sdcard/src/: main.c  writer.c
drivers/synapse/mcumgr_hooks/: CMakeLists.txt  Kconfig
drivers/synapse/mcumgr_hooks/include/: hcdf_mgmt.h
drivers/synapse/mcumgr_hooks/src/: hcdf_mgmt.c  mcumgr_hooks.c
drivers/synapse/topic/: CMakeLists.txt  Kconfig
drivers/synapse/topic/include/: synapse_shell_print.h  synapse_topic_list.h
drivers/synapse/topic/src/: synapse_shell_print.c  synapse_topic.c  synapse_topic_list.c
drivers/synapse/vesc_can/: Kconfig
drivers/synapse/zenoh/: CMakeLists.txt  Kconfig
drivers/synapse/zenoh/src/: main.c
dts/bindings/: spinali,dshot-actuators.yaml  spinali,pwm-actuators.yaml  spinali,vesc_can-actuators.yaml  vendor-prefixes.txt
include/spinali/core/: casadi.h  common.h  perf_counter.h  perf_duration.h
lib/: Kconfig
lib/core/: CMakeLists.txt
lib/core/common/: CMakeLists.txt  Kconfig
lib/core/common/src/: common.c  perf_counter.c  perf_duration.c
lib/core/workqueues/: CMakeLists.txt  Kconfig
lib/core/workqueues/src/: workq.c
scripts/: format_command.py  mcuboot_device_info.py  setup.sh  tidy_command.py
tests/afbr_s50_test/: testcase.yaml
tests/afbr_s50_test/src/: main.c
tests/apa102_test/: CMakeLists.txt  prj.conf  testcase.yaml
tests/apa102_test/src/: main.c
tests/bmm350_test/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bmm350_test/boards/: mr_mcxn_t1_mcxn947_cpu0.overlay
tests/bmm350_test/src/: main.c
tests/bmp581_test/: CMakeLists.txt  testcase.yaml
tests/bmp581_test/boards/: mr_mcxn_t1_mcxn947_cpu0.overlay
tests/bmp581_test/src/: main.c
tests/icm42688_test/: CMakeLists.txt  testcase.yaml
tests/icm42688_test/src/: main.c
tests/icm45686_test/: mr_mcxn_t1_oflo.overlay  prj.conf  testcase.yaml
tests/icm45686_test/boards/: mr_mcxn_t1_mcxn947_cpu0.overlay
tests/icm45686_test/src/: main.c
tests/optical_flow_test/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/optical_flow_test/boards/: mr_mcxn_t1_mcxn947_cpu0.overlay
tests/optical_flow_test/src/: main.c
tests/paa3905_test/: CMakeLists.txt  prj.conf  testcase.yaml
tests/paa3905_test/src/: main.c
