# SPDX-License-Identifier: Apache-2.0

add_subdirectory_ifdef(CONFIG_SPINALI_SYNAPSE_LOG_SDCARD log_sdcard)
add_subdirectory_ifdef(CONFIG_SPINALI_SYNAPSE_ETH_TX eth_tx)
add_subdirectory_ifdef(CONFIG_SPINALI_SYNAPSE_ETH_RX eth_rx)
add_subdirectory_ifdef(CONFIG_SPINALI_SYNAPSE_TOPIC topic)
add_subdirectory_ifdef(CONFIG_SPINALI_SYNAPSE_UDP udp)
add_subdirectory_ifdef(CONFIG_SPINALI_SYNAPSE_VESC_CAN vesc_can)
if(CONFIG_SPINALI_SYNAPSE_MCUMGR_HOOKS OR CONFIG_MCUMGR_GRP_HCDF)
  add_subdirectory(mcumgr_hooks)
endif()
